llvm/test/tools/llubi/inttoptr_generation2.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

target datalayout = "e-p:64:64:64"

define void @main() {
  ; Assume the pointer address is 8.
  %alloc = alloca i32
  %alloc2 = alloca i32
  ; We expose the provenance of another object so that the slow path is hitted.
  %tmp = ptrtoint ptr %alloc2 to i64
  %ptr1 = inttoptr i64 8 to ptr
  %int = ptrtoint ptr %alloc to i64
  %ptr2 = inttoptr i64 %int to ptr
  %ptr3 = inttoptr i64 8 to ptr

  ; We can access the wildcard pointer through exposed provenances.
  store i32 0, ptr %ptr2
  ; We can access the wildcard pointer through exposed provenances, even if there are no dependencies.
  store i32 0, ptr %ptr3
  ; We cannot access the pointer created before any provenance is exposed.
  store i32 0, ptr %ptr1

  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = alloca i32, align 4 => ptr 0x8 [alloc]
; CHECK-NEXT:   %alloc2 = alloca i32, align 4 => ptr 0x10 [alloc2]
; CHECK-NEXT:   %tmp = ptrtoint ptr %alloc2 to i64 => i64 16
; CHECK-NEXT:   %ptr1 = inttoptr i64 8 to ptr => ptr 0x8 [wildcard]
; CHECK-NEXT:   %int = ptrtoint ptr %alloc to i64 => i64 8
; CHECK-NEXT:   %ptr2 = inttoptr i64 %int to ptr => ptr 0x8 [wildcard]
; CHECK-NEXT:   %ptr3 = inttoptr i64 8 to ptr => ptr 0x8 [wildcard]
; CHECK-NEXT:   store i32 0, ptr %ptr2, align 4
; CHECK-NEXT:   store i32 0, ptr %ptr3, align 4
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i32 0, ptr %ptr1, align 4 at @main <stdin>:22
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
